feat: add SQLite database file patterns to .gitignore and create ARCHITECTURE.md for system overview

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,11 @@ dist
 # Serverless directories
 .serverless/
 
+# Sqlite database files
+*.db
+*.sqlite
+*.sqlite3
+
 # FuseBox cache
 .fusebox/
 
