--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,8 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# media-encoding-farm workspace
+data/media
+data/temp
+data/output
