Remove obsolete video and audio files, along with associated metadata and manifest files for VMAF and HLS formats. This includes the deletion of multiple .m4s, .mp4, .json, and .m3u8 files across different test scenarios, as well as the removal of the nohup output file. These changes help clean up the repository by eliminating unnecessary files that are no longer in use.

--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,6 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 # media-encoding-farm workspace
-data/media
-data/temp
-data/output
+data/
+
+
