feat: Refactor job parameter normalization and enhance error handling
- Moved `normalizeJobParams` function to a dedicated location for better code organization and reusability.
- Improved error messages for bitrate and CRF validation in job parameters.
- Added VMAF range validation and error handling for scene encoding.
- Enhanced logging for job processing in the scheduler.
- Implemented cleanup of temporary files after job completion or failure.
- Added support for target VMAF object in encoding parameters.
- Simplified VMAF calculation process and removed unnecessary video info checks.
- Introduced a cleanup script for orphaned temporary files.
- Updated architecture documentation to reflect recent changes.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production node --env-file .env --experimental-sqlite scripts/boot-app.mjs",
     "dev": "NODE_ENV=development node --env-file .env --experimental-sqlite scripts/boot-app.mjs",
-    "migrate": "node --env-file .env --experimental-sqlite src/db/migrate.mjs"
+    "migrate": "node --env-file .env --experimental-sqlite src/db/migrate.mjs",
+    "cleanup": "node scripts/cleanup-temp-files.mjs"
   },
   "dependencies": {
     "express": "^5.0.0",
