--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+.pnpm-store/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -146,4 +147,6 @@ vite.config.ts.timestamp-*
 # media-encoding-farm workspace
 data/
 
-
+# temp and test folders
+temp/
+test/
